<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>labbot_nav2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="abhinavgrg815@gmail.com">abhinav</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

    <!-- Nav2 core -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>dwb_core</exec_depend>
  <exec_depend>dwb_critics</exec_depend>
 
  <!-- Sensor processing -->
  <exec_depend>depthimage_to_laserscan</exec_depend>
 
  <!-- Your existing packages -->
  <exec_depend>labbot_slam</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
